[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["M0rfes <fahimkhan20148@gmail.com>"]
edition = "2021"

[lib]
name = "codecrafters_redis"
path = "src/lib/mod.rs"


[dependencies]
bytes = "1.10.0"
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
dashmap = "6.1.0"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = {version = "0.7.13", features = ["codec"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ulid = "1.2.0"
thiserror = "2.0.11"
