[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
bytes = "1.3.0"                                     # helps manage buffers
thiserror = "2.0.17"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
